# etna_sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
lib/imgui-1.89.9/: CMakeLists.txt
shaders/: Makefile
shaders/TAA/: shader.comp
shaders/abuffer_render/: shader.frag  shader.vert
shaders/abuffer_resolve/: shader.comp
shaders/depth_prepass/: shader.vert
shaders/fullscreen_blend/: shader.frag  shader.vert
shaders/gltf_opaque_forward/: shader.frag  shader.vert
shaders/include/: ABuffer.glsl  BRDF.glsl  GLTFMaterial.glsl  coords.glsl
shaders/simple_mesh/: shader.frag  shader.vert
shaders/triangle/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
shaders/triangle_texture/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: CameraEvents.hpp  app.hpp  app_events.hpp  imgui_ctx.hpp  init.cpp  main.cpp
src/events/: events.cpp  events.hpp
src/renderer/: IRenderer.hpp  TAA.cpp  TAA.hpp
src/scene/: ABufferRenderer.cpp  ABufferRenderer.hpp  Camera.hpp  GLTFScene.cpp  GLTFScene.hpp  SceneRenderer.cpp  SceneRenderer.hpp
